# bedclass

./: .gitignore  ASE_regression_bouguer-beta-resid_vs_BM.txt  ASE_regression_bouguer-beta-resid_vs_BMroughness.txt  ASE_regression_bouguer-beta.txt  LICENSE.txt  PFtoZones_QGIS_wZONALSTATS.py  README.md  environment.yml  query_FAG.qqf  setup.cfg  setup.py  test_load_Stubblefield.ipynb  test_load_UTG-line.ipynb  test_read_ROSETTA_hydrostatic.ipynb  test_read_ROSETTA_radar-matfiles.ipynb
.github/workflows/: release.yaml  test.yaml
bedclass/: _version.py  config.py  custom_funcs.py
bedclass/.ipynb_checkpoints/: custom_funcs-checkpoint.py
ci/: environment-py3.7.yml  environment-py3.8.yml
data/interim/: Sample_ASE_antgg3.csv
data/processed/: ASE_profile_Muto_sample.xlsx  Clyne_Thwaites_ALL.geojson  predict_sed_basin_ASE_logistic.csv
docs/: api.rst  bedclass_magzones_Kirsty_v1.gda  conf.py  environment.yml  index.rst
notebooks/: 01_load_Stubblefield.ipynb  02-load_UpperThwaites_geophysics.ipynb  03-basic_ML_UpperThwaites-line.ipynb  test_read_ROSETTA_radar-matfiles.ipynb
notebooks/.ipynb_checkpoints/: test_load_Stubblefield-checkpoint.ipynb  test_load_UTG-line-checkpoint.ipynb
notebooks/archive/: test-basic_ML_surveyline.ipynb  test_load_Borthwick-line.ipynb  test_load_UTG-line.ipynb
scripts/: test_QGIS_ZStats.py  test_QGIS_ZStats_loop.py
tests/: test_dummy.py
